--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
  * @LastEditors: afei
- * @LastEditTime: 2021-10-25 12:21:21
+ * @LastEditTime: 2021-10-25 14:46:41
 -->
 <!DOCTYPE html>
 <html>
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <p>功能列表：</p>
   <ol></ol>
   <script src="js/jquery1.9.min.js"></script>
   <script src="js/aggregate.js"></script>
