--- a/modules/temporary-project/index.html
+++ b/modules/temporary-project/index.html
@@ -1,6 +1,6 @@
 <!--
  * @LastEditors: afei
- * @LastEditTime: 2021-10-25 15:28:06
+ * @LastEditTime: 2021-10-25 15:49:06
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -92,10 +92,10 @@
     <script src="js/china.js"></script>
     <script>
         $('.section .xpst').on('click', function () {
-            window.open('西普生态.html');
+            window.open('ecology.html');
         });
         $('.section .yxcg').on('click', function () {
-            window.open('院校成功.html');
+            window.open('colleges.html');
         });
         $('.section .kctx .gear').on('click', function () {
             $('.top').addClass($(this).attr('class').replace('gear', '').trim());
